Fixed UserNavbar.css for wrong width of search bar

--- a/project/src/Clippy/ClientApp/src/components/UserNavbar/UserNavbar.css
+++ b/project/src/Clippy/ClientApp/src/components/UserNavbar/UserNavbar.css
@@ -1,7 +1,7 @@
 .header {
   padding: 15px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   position: sticky;
@@ -20,7 +20,7 @@
   align-items: center;
   background-color: #eff2f5;
   padding: 10px;
-  width: fill;
+  width: 100%;
   margin-left: 10px;
   border-radius: 999px;
   color: rgba(0, 0, 0, 0.6);
@@ -30,7 +30,7 @@
   color: rgba(0, 0, 0, 0.6);
 }
 
-.header__option {
+.MuiTypography-root {
   padding: 0 30px;
   display: flex;
   align-items: center;
